[tool.poetry]
name = "game-brenda"
version = "0.1.0"
description = "jogo com python"
authors = ["brenda laufer vieira"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
